--- a/Appendices/Health/validation.tex
+++ b/Appendices/Health/validation.tex
@@ -11,7 +11,7 @@
 Mortality and demographic measures are presented in Tables~\ref{table:crossval_unweighted} and \ref{table:crossval_demog}. Mortality incidence is comparable between the simulated and observed populations. Demographic characteristics do not differ between the two.\\
 
 \noindent\textbf{Health Outcomes}
-Binary health outcomes are presented in Table~\ref{table:crossval_binhlth}. FAM underestimates the prevalence of ADL and IADL limitations compared to the cross-validation sample. Binary outcomes, like cancer, diabetes, heart disease, and stroke do not differ. FAM underpredicts hypertension and lung disease compared to the cross-validation sample.\\
+Binary health outcomes are presented in Table~\ref{table:crossval_binhlth}. FAM underestimates the prevalence of ADL and IADL limitations compared to the cross-validation sample. Binary outcomes, like cancer, diabetes, heart disease, and stroke do not differ. FAM underforecasts hypertension and lung disease compared to the cross-validation sample.\\
 
 \noindent\textbf{Health Risk Factors}
 Risk factors are presented in Table~\ref{table:crossval_risk}. BMI is not statistically different between the two samples. Current smoking is not statistically different, but more individuals in the cross-validation sample report being former smokers.\\
