--- a/Appendices/Crime.tex
+++ b/Appendices/Crime.tex
@@ -18,7 +18,7 @@
 \item Uniform Crime Reporting Statistics (UCRS). This dataset contains all crimes that are reported to the police. It contains crimes to households, individuals, and businesses that are captured by most of the law enforcement agencies in the country. We used data from UCRS spanning the years 1996 to 2012. We use UCRS as a complement to NCVS when we estimate the total number of victims per type of crime in the U.S. %We use UCR to construct national arrest-to-sentences and victims-to-arrests ratios for our crime categories.
 %\item Bureau of Justice Statistics (BJS): the BJS' Arrest Data Analysis Tool has data on arrests per year per type of crime. This data only includes arrests made by state authorities. There are 133 federal authorities with the jurisdiction to arrest individuals, such as the FBI and Custom and Border Patrol, but this data is not publicly available. As with arrests, there is a distinction between Federal and State sentences given to offenders, depending on whether they were convicted in a state or federal court. We also used the BJS's Offender Sentences tool to acquire data on Federal sentences from 1998 to 2012. It is, however, in more general categories and only includes Violent, Property, Public Order, Drug and Other Offenses.
 \item National Judicial Reporting Program (NJRP). We use the NJRP to get data for total number of sentences in the U.S. The data were taken from reports published biennially from 1986 to 2006. We use this dataset to construct arrest-sentence ratios for our crime categories.
-\item North Carolina Department of Public Safety dataset (NCDPS). This dataset contains information since 1972 on each individual who is convicted of a crime and enters the state prison system or community supervision in North Carolina. The data do not include arrests, or sentences involving jail or unsupervised probation. Because the North Carolina Department of Public Safety was created 3 years ago to consolidate the state's Department of Correction, Department of Juvenile Justice, and Crime Control, among other state agencies, these data were mostly constructed by the other agencies. We use this dataset to fit a prediction model that we use to predict future crimes for ABC/CARE subjects.
+\item North Carolina Department of Public Safety dataset (NCDPS). This dataset contains information since 1972 on each individual who is convicted of a crime and enters the state prison system or community supervision in North Carolina. The data do not include arrests, or sentences involving jail or unsupervised probation. Because the North Carolina Department of Public Safety was created 3 years ago to consolidate the state's Department of Correction, Department of Juvenile Justice, and Crime Control, among other state agencies, these data were mostly constructed by the other agencies. We use this dataset to fit a forecasting model that we use to forecast future crimes for ABC/CARE subjects.
 \end{enumerate}
 
 \subsubsection{Crime Categories}
@@ -64,7 +64,7 @@
 \begin{enumerate}
 \item \textit{Count Arrests and Sentences}. We count the total number of sentences for each subject, $i$, and category of crime (robbery, larceny, etc.), $j$, up to age 34,  which we denote by $S_{i,j}^{34}$. We also match the data on adult arrests, juvenile arrests, and self-reported crimes, to construct total number of  arrests for each crime type up to that age, $A_{i,j}^{34}$. For some subjects, the arrest data are missing. In those cases, we impute the missing data by assuming that the national arrest-sentence ratio for crime type, $j$, is valid for each subject. Let $\overline{A_j}$ be the national total number of arrests for crime type, $j$, and let $\overline{S_j}$ be the national total number of sentences. Then, we construct $r_j=\frac{\overline{A_j}}{\overline{S_j}}$, and we impute $A_{i,j}^{34}=r_j S_{i,j}^{34}$.
 
-\item \textit{Construct Predictions}. From our external data, we have a dataset to predict lifetime sentences. In that dataset, we use sentences up to age 34 in all types of crime to predict future sentences for that crime type, $\widehat{S_{i,j}^{35-50}}$. This gives an estimate of the lifetime sentences as $\widehat{S_{i,j}}=S_{i,j}^{34}+\widehat{S_{i,j}^{35-50}}$. Given that we do not have an analogous dataset to predict lifetime arrests, we impute the predicted arrests as a linear function of the predicted number of sentences: $\widehat{A_{i,j}^{35-50}}=r_j \widehat{S_{i,j}^{35-50}}$. Then, we calculate $\widehat{A_{i,j}}=A_{i,j}^{34}+\widehat{A_{i,j}^{35-50}}$.
+\item \textit{Construct Forecasts}. From our external data, we have a dataset to forecast lifetime sentences. In that dataset, we use sentences up to age 34 in all types of crime to forecast future sentences for that crime type, $\widehat{S_{i,j}^{35-50}}$. This gives an estimate of the lifetime sentences as $\widehat{S_{i,j}}=S_{i,j}^{34}+\widehat{S_{i,j}^{35-50}}$. Given that we do not have an analogous dataset to forecast lifetime arrests, we impute the forecasted arrests as a linear function of the forecasted number of sentences: $\widehat{A_{i,j}^{35-50}}=r_j \widehat{S_{i,j}^{35-50}}$. Then, we calculate $\widehat{A_{i,j}}=A_{i,j}^{34}+\widehat{A_{i,j}^{35-50}}$.
 
 \item \textit{Estimate Number of Victims}. Let the national number of victims of a given type of crime be $\overline{V_j}$. We construct a victimization inflation factor for each crime type: $f_j=\frac{\overline{V_j}}{\overline{A_j}}$. It represents the number of times someone is arrested as a fraction of the number of victims of the crimes. Then, the estimated number of victims of subject, $i$, for crime type, $j$, based on arrests is estimated as $\widehat{V_{i,j}^{A}}=A_{i,j}f_j$. For sentences, we calculate an analogous estimate of victims based on the victimization inflation factor and the arrest-sentence ratio: $\widehat{V_{i,j}^{S}}=S_{i,j}f_j r_j$. Both estimates are similar, as we show below. We construct our final estimate of the lifetime victims of subject, $i$, for crime type, $j$, as the average of both estimates to achieve greater precision: $\widehat{V_{i,j}}=\left(\widehat{V_{i,j}^A}+\widehat{V_{i,j}^S}\right)/2$.
 
@@ -92,22 +92,22 @@
 }
 \end{figure}
 
-\subsubsection{Construct Predictions}
+\subsubsection{Construct Forecasts}
 
-\noindent The data available describe the ABC/CARE subjects' crimes committed up to age 34. However, we believe that the effect of the programs on crime does not stop at that age. To predict the number of crimes that the study participants commit beyond age 34, we use data from the North Carolina Department of Public Safety (NCDPS). Because the crime data are obtained from the same state in which ABC/CARE were implemented, the prediction model is appropriate for the ABC/CARE samples. To the best of our knowledge, no study of the effects of an early childhood education program has ever used microdata to estimate a predictive model for future crimes. The estimations in \cite{Heckman_Moon_etal_2010_RateofReturn} are based on national age ratios (crimes of a certain category committed by older people over crimes of the same category committed by younger people at a specific time), rather than on microdata. However, age ratios only consider the same category of crime as an input to the estimation model and the results can reflect demographic transitions.
+\noindent The data available describe the ABC/CARE subjects' crimes committed up to age 34. However, we believe that the effect of the programs on crime does not stop at that age. To forecast the number of crimes that the study participants commit beyond age 34, we use data from the North Carolina Department of Public Safety (NCDPS). Because the crime data are obtained from the same state in which ABC/CARE were implemented, the forecasting model is appropriate for the ABC/CARE samples. To the best of our knowledge, no study of the effects of an early childhood education program has ever used microdata to estimate a predictive model for future crimes. The estimations in \cite{Heckman_Moon_etal_2010_RateofReturn} are based on national age ratios (crimes of a certain category committed by older people over crimes of the same category committed by younger people at a specific time), rather than on microdata. However, age ratios only consider the same category of crime as an input to the estimation model and the results can reflect demographic transitions.
 
-It would be ideal to use prediction models estimated from the same cohorts as the ABC/CARE subjects. However, it is not possible to predict crimes committed until older ages because the ABC/CARE subjects are currently about 46 years old. To predict crimes at older ages, it is necessary to use earlier cohorts. The data are available from 1972 (44 years ago as of 2016), and thus they do not contain a complete criminal history for any cohort of individuals.
+It would be ideal to use forecasting models estimated from the same cohorts as the ABC/CARE subjects. However, it is not possible to forecast crimes committed until older ages because the ABC/CARE subjects are currently about 46 years old. To forecast crimes at older ages, it is necessary to use earlier cohorts. The data are available from 1972 (44 years ago as of 2016), and thus they do not contain a complete criminal history for any cohort of individuals.
 %Given that, we have to choose specific cohorts for the estimations, such that they are old enough to cover the ages we need to predict, and young enough to have their entire crime life covered in the dataset, in the same way as the entire crime life of ABC individuals in covered in our data. In particular,
 We assume that few crimes are committed after the age of 50. \\
 %, and that crime life does not start until age 16.
  We separately estimate predictions from ages 35-40, 40-45, and 45-50. We have plentiful observations to estimate crimes in all the age ranges. %\footnote{As an example, to predict crimes at ages 45-50 we need individuals aged 50+. To have enough birth year cohorts, we consider individuals aged 50-59 in 2015. The oldest of these individuals were aged 16 in 1972, so we can reasonably expect them to having committed few crimes before that year. Finding observations for crime predictions at earlier ages is even easier.}
 %Age 5 in 2015-->Age 12 in 1972.            Age 50 in 2015-->Age 16 in 1972.
 %Age 55 in 2015-->Age 12 in 1972.            Age 59 in 2015-->Age 16 in 1972.
-We calculate our predictions using a five-step procedure:
+We calculate our forecasts using a five-step procedure:
 \begin{enumerate}
 \item Find individuals that are at least 40 years old as of 2016 in the NCDPS dataset.
 \item Regress the number of crimes of each type at ages 35--40 on those at ages 16--34.
-\item Use the estimated prediction model for ABC individuals, attributing those crimes to age 40 for discounting purposes.
+\item Use the estimated forecasting model for ABC individuals, attributing those crimes to age 40 for discounting purposes.
 \item Repeat the three previous steps for ages 40--45 and 45--50. %50-55?
 \item For individuals with no criminal histories before age 34, assume that they commit no crimes after 34.
 \end{enumerate}
@@ -208,17 +208,17 @@ We calculate our predictions using a five-step procedure:
 %\end{threeparttable}
 %\end{sidewaystable}
 
-\noindent We perform the previous process separately for males and females. We use linear predictions, but replace negative predicted values of crime by zero. Table~\ref{tab:reg1f} through Table~\ref{tab:reg3m} show the estimated models. As expected, generally the most important prediction factor for a crime is the number of occurrences of the same crime type in a previous period. The coefficients in some cases are substantial,which implies that considering predicted crimes is an important part of an assessment of the crime benefits of the program.\\
+\noindent We perform the previous process separately for males and females. We use linear forecasts, but replace negative forecasted values of crime by zero. Table~\ref{tab:reg1f} through Table~\ref{tab:reg3m} show the estimated models. As expected, generally the most important prediction factor for a crime is the number of occurrences of the same crime type in a previous period. The coefficients in some cases are substantial,which implies that considering forecasted crimes is an important part of an assessment of the crime benefits of the program.\\
 
-\noindent This procedure gives a prediction of the number of sentences that the ABC/CARE subjects will receive after age 34. From the predicted number of sentences, we predict the number of arrests up to age 50. Figure \ref{fig:predictions} shows the effect of our prediction methodology. The effect is quantitatively much larger for arrests than for sentences. For both arrests and sentences, including the predicted crimes, this effect adds 30-50\% more crimes to our previous totals. The predictions are roughly proportional to the previous crimes, as discussed before. \\
+\noindent This procedure gives a forecast of the number of sentences that the ABC/CARE subjects will receive after age 34. From the forecasted number of sentences, we forecast the number of arrests up to age 50. Figure \ref{fig:predictions} shows the effect of our forecasting methodology. The effect is quantitatively much larger for arrests than for sentences. For both arrests and sentences, including the forecasted crimes, this effect adds 30-50\% more crimes to our previous totals. The predictions are roughly proportional to the previous crimes, as discussed before. \\
 
 \begin{figure}[H]
-\caption{Constructed Predictions}
+\caption{Constructed Forecasts}
 \centering \label{fig:predictions}
 {\scalebox{0.8}{\includegraphics{AppOutput/Crime/predictions}}}
 \floatfoot{
 \footnotesize
-\noindent Note: This figure continues Figure \ref{fig:datagraph}. It shows, for the control (C) and treatment (T) groups, the effects of adding predictions. The first pair of columns is the same as the fifth pair of columns in Figure \ref{fig:datagraph}. The second pair of columns includes the arrests that we predict. The third and fourth pairs of columns are the analogous pairs for sentences.
+\noindent Note: This figure continues Figure \ref{fig:datagraph}. It shows, for the control (C) and treatment (T) groups, the effects of adding forecasts. The first pair of columns is the same as the fifth pair of columns in Figure \ref{fig:datagraph}. The second pair of columns includes the arrests that we forecast. The third and fourth pairs of columns are the analogous pairs for sentences.
 }\end{figure}
 
 \subsection{Victimization Inflation}
@@ -342,7 +342,7 @@ It is important to clarify that we only include costs of the justice system for 
 %numbers from combined_datasetv3
 
 \subsubsection{Effects on Costs Before Victimization Inflation}  Figure \ref{tab:diff-costs} presents the estimated costs per type of cost before victimization inflation.
-\noindent There are clear positive effects for the treatment group in terms of reductions in the costs of crime. Those reductions are almost exclusively given by the large effect of the murder case we observe in the control group (note that murder also appears in the treatment group costs because of the predictions). Comparing the bars in this figure, the costs from the justice system and from imprisonment are low compared with the victimization costs, even without victimization inflation. While the levels of the arrest-based estimates are higher than the levels of the sentence-based estimates for both the treatment and control groups, the impacts of the program are quite similar across both methods (Figure~\ref{tab:diff-costs}). \\
+\noindent There are clear positive effects for the treatment group in terms of reductions in the costs of crime. Those reductions are almost exclusively given by the large effect of the murder case we observe in the control group (note that murder also appears in the treatment group costs because of the forecasts). Comparing the bars in this figure, the costs from the justice system and from imprisonment are low compared with the victimization costs, even without victimization inflation. While the levels of the arrest-based estimates are higher than the levels of the sentence-based estimates for both the treatment and control groups, the impacts of the program are quite similar across both methods (Figure~\ref{tab:diff-costs}). \\
 
 \begin{figure} [H]
 \caption{Costs of Crime Before Victimization Inflation}
@@ -387,7 +387,7 @@ Some of the sources of cost estimates, such as the more serious crimes, result i
 
 \begin{enumerate}
 \item We show that not matching the different crime datasets could reduce the number of crimes, but that the general patterns are stable, and no dataset is especially influential.
-\item We show that not including predictions up to age 50 noticeably reduces the number of crimes, but the general patterns are not modified.
+\item We show that not including forecasts up to age 50 noticeably reduces the number of crimes, but the general patterns are not modified.
 \item We show estimates using arrest-based estimations versus sentence-based estimations, and find that the differences are large in terms of the number of crimes before victimization inflation, but small after it, and do not substantially change the total benefits calculations.
 \end{enumerate}
 
